# Prism

./: .bandit  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEBT_WAIVER.json.example  Dockerfile  KSA_COPILOT_PROMPT.md  LICENSE  README.md  SECURITY.md  artifact_store.py  constitution.yaml  daily_workflow.py  decision_spectrum.py  device_hub.py  digital_identity.py  docker-compose.yml  domain_configs.py  domain_validator.py  duel_analyzer.py  identity_bus.py  kde_agent.py  kde_cli.py  kde_config.py  kde_dashboard.py  kde_profiles.py  kde_server.py  kde_ui.py  ksa_agent.py  ksa_cli.py  ksa_config.py  ksa_executor.py  ksa_fixes.py  ksa_jarvis.py  ksa_lever.py  ksa_optimizer.py  ksa_registry.py  ksa_router.py  media_processor.py  (+159 more)
.github/workflows/: ci.yml
demos/: README.md  demo.sh  mcp_demo_server.py  multitask_demo.sh
docs/: ARCHITECTURE.md  QUICKSTART.md  architecture.md  command-centre-assessment.md  rfc-agentic-loop.md
docs/comparison/: README.md  architecture.mmd  positioning.mmd
organs/: __init__.py  agents_inventory.py  bluetooth_control.py  brightness_control.py  calc_eval.py  calendar_write.py  canary_check.py  clipboard_read.py  clock_query.py  computer_use.py  currency_convert.py  desktop_capabilities.py  device_inventory.py  discord_send.py  document_read.py  dropbox_fetch.py  email_send.py  file_read.py  file_write.py  finance_summary.py  gdrive_search.py  github_issue.py  health_summary.py  input_control.py  meeting_brief.py  mesh_orchestrate.py  mesh_register.py  news_headlines.py  note_append.py  note_list.py  notify_desktop.py  notion_query.py  phone_call.py  policy_audit.py  policy_inspect.py  policy_update.py  qr_generate.py  random_pick.py  reminder_set.py  screenshot_capture.py  (+17 more)
tests/: _mcp_mock_server.py  conftest.py  test_agent_fallbacks_issue_28.py  test_agent_registry.py  test_allostatic.py  test_approval_flow.py  test_approvals_list_issue_28.py  test_artifact_store.py  test_asgi_bind_host_issue_28.py  test_asgi_routes.py  test_async_llm_router.py  test_autonomous.py  test_autonomous_fuzzy_match_issue_28.py  test_biometric_hysteresis.py  test_biometric_veax_bridge.py  test_bluetooth_control_routing_issue_28.py  test_brightness_control_routing_issue_28.py  test_browser_agent.py  test_browser_persistent.py  test_bud_manager.py  test_bud_manager_persistence.py  test_budget_status_routing_issue_28.py  test_bundled_organs_pass_ast_scan_issue_28.py  test_calc_eval_issue_28.py  test_calc_eval_log_factorial_issue_28.py  test_calc_eval_mixed_script_issue_28.py  test_calc_eval_power_op_issue_28.py  test_calc_eval_word_forms_issue_28.py  test_calendar.py  test_calendar_read_routing_issue_28.py  test_calendar_write_and_agenda_routing_issue_28.py  test_calibration.py  test_calls.py  test_canary_check.py  test_causality.py  test_ceremony_heuristic_issue_28.py  test_chain.py  test_chain_expert.py  test_chain_streaming.py  test_chain_streaming_async.py  (+240 more)
vscode-extension/: README.md  extension.js  package.json
