[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-platform"
version = "0.1.0"
description = "Local personal AI assistant — decides, plans, executes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["psutil>=5.9", "Pillow>=10.0"]
urls = { Homepage = "https://github.com/chizoalban2003-beep/Prism", Repository = "https://github.com/chizoalban2003-beep/Prism" }

[project.optional-dependencies]
full = ["playwright", "openai-whisper", "faster-whisper", "pyaudio", "pydub",
        "pdfplumber", "openpyxl", "aiohttp", "mss", "twilio>=8.0", "anthropic>=0.25"]
dev  = ["ruff>=0.4.0", "pytest>=7.0", "mypy>=1.8", "pytest-cov>=4.0"]

[project.scripts]
prism = "kde_cli:main"
kde = "kde_cli:main"
ksa = "ksa_cli:main"

[tool.setuptools]
license-files = ["LICENSE"]
py-modules = [
    "artifact_store",
    "daily_workflow",
    "decision_spectrum",
    "device_hub",
    "digital_identity",
    "domain_configs",
    "domain_validator",
    "duel_analyzer",
    "identity_bus",
    "kde_agent",
    "kde_cli",
    "kde_config",
    "kde_dashboard",
    "kde_profiles",
    "kde_server",
    "kde_ui",
    "ksa_agent",
    "ksa_cli",
    "ksa_config",
    "ksa_executor",
    "ksa_fixes",
    "ksa_jarvis",
    "ksa_lever",
    "ksa_optimizer",
    "ksa_registry",
    "ksa_router",
    "media_processor",
    "moment_analyzer",
    "moment_configs_ext",
    "moment_pipeline",
    "moment_validator",
    "prediction_engine",
    "prism_agent",
    "prism_autonomous",
    "prism_browser_agent",
    "prism_chain",
    "prism_chain_bench",
    "prism_chain_expert",
    "prism_chain_theory",
    "prism_chain_theory_bench",
    "prism_composer",
    "prism_calendar",
    "prism_calibration",
    "prism_chat",
    "prism_collaborator",
    "prism_contacts",
    "prism_device_agent",
    "prism_device_executor",
    "prism_device_resolver",
    "prism_device_scanner",
    "prism_email",
    "prism_executor_agent",
    "prism_instructions",
    "prism_llm_router",
    "prism_horizon",
    "prism_memory",
    "prism_context_profile",
    "prism_orchestrator",
    "prism_organ_bus",
    "prism_organ_bus_experiment",
    "prism_organ_loader",
    "prism_crystalliser",
    "prism_narrative",
    "prism_outcome_tracker",
    "prism_perception",
    "prism_persona",
    "prism_pwa",
    "prism_planner",
    "prism_policy",
    "prism_proactive",
    "prism_proactive_bus_watcher",
    "prism_push",
    "prism_reflection",
    "prism_responses",
    "prism_daemon",
    "prism_identity_ceremony",
    "prism_search",
    "prism_soul",
    "prism_service_discovery",
    "prism_smart_home",
    "prism_task_queue",
    "prism_tasks",
    "prism_tool_finder",
    "prism_tts",
    "prism_voice",
    "sport_data",
    "sport_executor",
    "sport_spectrum",
    "sport_tasks",
    "sports_pro",
    "vision_analyzer",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# HTML/SVG/JS embedded strings cannot be wrapped
"prism_chat.py" = ["E501"]
"kde_ui.py" = ["E501"]
"prism_pwa.py" = ["E501"]
# LLM prompt templates contain long lines that must not be reformatted
"prism_chain.py" = ["E501"]
"prism_chain_expert.py" = ["E501"]
"prism_planner.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
