[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-platform"
version = "0.1.1"
description = "Local personal AI assistant — decides, plans, executes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "psutil>=5.9",
  "Pillow>=10.0,<12.0",
  "pyyaml>=6.0",
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "anyio[trio]>=4.0",
  "python-multipart>=0.0.18",
]
urls = { Homepage = "https://github.com/chizoalban2003-beep/Prism", Repository = "https://github.com/chizoalban2003-beep/Prism" }

[project.optional-dependencies]
messaging = ["python-telegram-bot>=21.0,<22.0", "twilio>=8.0,<10.0"]
ml = ["scikit-learn>=1.4", "xgboost>=2.0", "lightgbm>=4.0", "numpy>=1.26"]
torch = ["torch>=2.0"]
lora = ["unsloth>=2024.1", "trl>=0.8", "peft>=0.10", "datasets>=2.18"]
full = ["playwright", "openai-whisper", "faster-whisper", "pyaudio", "pydub",
        "pdfplumber", "openpyxl", "aiohttp", "mss", "twilio>=8.0,<10.0",
        "anthropic>=0.25,<2.0", "tomli>=2.0",
        "python-telegram-bot>=21.0,<22.0",
        "scikit-learn>=1.4", "xgboost>=2.0", "lightgbm>=4.0", "numpy>=1.26",
        "unsloth>=2024.1", "trl>=0.8", "peft>=0.10", "datasets>=2.18",
        "pystray>=0.19", "pywebview>=5.0"]
tray = ["pystray>=0.19", "pywebview>=5.0", "Pillow>=10.0,<12.0"]
dev  = ["ruff>=0.4.0", "pytest>=7.0", "mypy>=1.8", "pytest-cov>=4.0", "anyio[trio]>=4.0", "httpx>=0.27",
        "fastapi>=0.111", "python-multipart>=0.0.18"]

[project.scripts]
prism = "prism_daemon:main"
prism-tray = "prism_tray:main"
kde = "kde_cli:main"
ksa = "ksa_cli:main"

[tool.setuptools]
license-files = ["LICENSE"]
py-modules = [
    "artifact_store",
    "daily_workflow",
    "decision_spectrum",
    "device_hub",
    "digital_identity",
    "domain_configs",
    "domain_validator",
    "duel_analyzer",
    "identity_bus",
    "kde_agent",
    "kde_cli",
    "kde_config",
    "kde_dashboard",
    "kde_profiles",
    "kde_ui",
    "ksa_agent",
    "ksa_cli",
    "ksa_config",
    "ksa_executor",
    "ksa_fixes",
    "ksa_jarvis",
    "ksa_lever",
    "ksa_optimizer",
    "ksa_registry",
    "ksa_router",
    "media_processor",
    "moment_analyzer",
    "moment_configs_ext",
    "moment_pipeline",
    "moment_validator",
    "prediction_engine",
    "prism_agent",
    "prism_autonomous",
    "prism_browser_agent",
    "prism_chain",
    "prism_chain_bench",
    "prism_chain_expert",
    "prism_chain_theory",
    "prism_chain_theory_bench",
    "prism_composer",
    "prism_calendar",
    "prism_calibration",
    "prism_chat",
    "prism_collaborator",
    "prism_contacts",
    "prism_device_agent",
    "prism_device_executor",
    "prism_device_resolver",
    "prism_device_scanner",
    "prism_email",
    "prism_executor_agent",
    "prism_instructions",
    "prism_bud_manager",
    "prism_constitution",
    "prism_llm_ledger",
    "prism_llm_router",
    "prism_lora_registry",
    "prism_lora_trainer",
    "prism_horizon",
    "prism_memory_graph",
    "prism_metrics",
    "prism_settings_llm",
    "prism_setup_llm",
    "prism_shadow_pipeline",
    "prism_silicon_policy",
    "prism_context_budget",
    "prism_tvm_bridge",
    "prism_speculative",
    "prism_spectrum_middleware",
    "prism_wal",
    "prism_watchdog",
    "prism_memory",
    "prism_messaging_gateway",
    "prism_context_profile",
    "prism_orchestrator",
    "prism_phase",
    "prism_auth",
    "prism_organ_bus",
    "prism_organ_loader",
    "prism_schema_registry",
    "prism_ssrf",
    "prism_veax",
    "prism_crystalliser",
    "prism_narrative",
    "prism_outcome_tracker",
    "prism_perception",
    "prism_persona",
    "prism_pwa",
    "prism_planner",
    "prism_policy",
    "prism_proactive",
    "prism_proactive_bus_watcher",
    "prism_push",
    "prism_reflection",
    "prism_responses",
    "prism_daemon",
    "prism_identity_ceremony",
    "prism_search",
    "prism_soul",
    "prism_service_discovery",
    "prism_smart_home",
    "prism_task_queue",
    "prism_tasks",
    "prism_tool_finder",
    "prism_tts",
    "prism_voice",
    "sport_data",
    "sport_executor",
    "sport_spectrum",
    "sport_tasks",
    "sports_pro",
    "vision_analyzer",
    "run_stress_topology",
    "prism_asgi",
    "prism_state",
    "prism_routes_agent",
    "prism_routes_analytics",
    "prism_routes_chain",
    "prism_routes_core",
    "prism_routes_horizon",
    "prism_routes_ide",
    "prism_routes_infra",
    "prism_routes_integrations",
    "prism_routes_media",
    "prism_routes_predict",
    "prism_routes_sensors",
    "prism_routes_ui",
    "prism_mobile_sync",
    "prism_routes_mobile",
    "prism_multi_user",
    "prism_routes_users",
    "prism_federation",
    "prism_routes_federation",
    "prism_routes_identity",
    "prism_visual_perception",
    "prism_routes_perception",
    "prism_causality",
    "prism_routes_causality",
    "prism_kinetic_engine",
    "prism_routes_kinetic",
    "prism_ml_assembler",
    "prism_routes_ml",
    "prism_vision_ml_bridge",
    "prism_torch_models",
    "prism_routes_sessions",
    "prism_session_manager",
    "prism_tray",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_hardware: tests that require physical hardware (Apple Watch, GoPro, etc.) — skipped in CI",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B007", "B904", "SIM910", "SIM114"]
ignore = [
    "UP045",  # Optional[X] → X | None (large churn, deferred)
    "UP035",  # deprecated typing imports (some are 3.11-safe but noisy)
    "UP042",  # StrEnum — runtime behavior change, deferred
    "B905",   # zip(strict=) — would require strict=False everywhere, deferred
]

[tool.ruff.lint.per-file-ignores]
# HTML/SVG/JS embedded strings cannot be wrapped
"prism_chat.py" = ["E501"]
"kde_ui.py" = ["E501"]
"prism_pwa.py" = ["E501"]
# HTML/SVG/JS embedded strings cannot be wrapped
"prism_routes_identity.py" = ["E501"]
"prism_routes_users.py" = ["E501"]
# LLM prompt templates contain long lines that must not be reformatted
"prism_chain.py" = ["E501"]
"prism_chain_expert.py" = ["E501"]
"prism_planner.py" = ["E501"]
# pytest.importorskip must precede conditional imports
"tests/test_torch_models.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
